--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,14 +9,14 @@
   weight = 10
 
 [[main]]
-  name = "Posts"
+  name = "Projects"
   url = "#posts"
   weight = 20
 
 [[main]]
-  name = "Projects"
-  url = "#projects"
-  weight = 30
+name = "Experiences"
+url = "#experience"
+weight = 20
 
 [[main]]
   name = "Publications"
